--- a/demo-async/pom.xml
+++ b/demo-async/pom.xml
@@ -39,6 +39,11 @@
             <artifactId>lombok</artifactId>
             <optional>true</optional>
         </dependency>
+        <dependency>
+          <groupId>com.google.guava</groupId>
+          <artifactId>guava</artifactId>
+          <version>18.0</version>
+        </dependency>
     </dependencies>
 
     <build>
