--- a/demo-cache-redis/src/main/resources/application.yml
+++ b/demo-cache-redis/src/main/resources/application.yml
@@ -1,10 +1,21 @@
 spring:
+  session:
+    store-type: redis
   redis:
-    host: localhost
+    host: redis-gd
+    port: 9736
     # 连接超时时间（记得添加单位，Duration）
     timeout: 10000ms
     # Redis默认情况下有16个分片，这里配置具体使用的分片
-    # database: 0
+    database: 0
+    # 密码 没有则可以不填
+    password: gdxmss@1218
+    # 集群配置（根据实际情况配置多节点）
+    #    cluster:
+    #      nodes:
+    #        - 192.168.200.161:6379
+    #      max-redirects: 2
+    # lettuce连接池
     lettuce:
       pool:
         # 连接池最大连接数（使用负值表示没有限制） 默认 8
@@ -20,4 +31,4 @@ spring:
     type: redis
 logging:
   level:
-    com.xkcoding: debug
+    com.xkcoding: info
