--- a/demo-cache-redis/pom.xml
+++ b/demo-cache-redis/pom.xml
@@ -76,7 +76,6 @@
         <groupId>javax.servlet</groupId>
         <artifactId>javax.servlet-api</artifactId>
       </dependency>
-
       <dependency>
         <groupId>org.redisson</groupId>
         <artifactId>redisson-spring-boot-starter</artifactId>
@@ -84,13 +83,14 @@
         <exclusions>
           <exclusion>
             <groupId>org.redisson</groupId>
-            <artifactId>redisson-spring-data-23</artifactId>
+            <artifactId>redisson-spring-data-24</artifactId>
           </exclusion>
         </exclusions>
       </dependency>
       <dependency>
         <groupId>org.redisson</groupId>
         <artifactId>redisson-spring-data-21</artifactId>
+        <version>3.15.6</version>
       </dependency>
 
     </dependencies>
