--- a/pom.xml
+++ b/pom.xml
@@ -70,6 +70,7 @@
     <module>demo-https</module>
     <module>demo-flyway</module>
     <module>demo-pay</module>
+    <module>demo-ffmpeg</module>
   </modules>
   <packaging>pom</packaging>
 
