--- a/demo-zookeeper/pom.xml
+++ b/demo-zookeeper/pom.xml
@@ -20,6 +20,8 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <java.version>1.8</java.version>
+        <zookeeper.version>3.5.8</zookeeper.version>
+
     </properties>
 
     <dependencies>
@@ -44,9 +46,21 @@
         <dependency>
             <groupId>org.apache.curator</groupId>
             <artifactId>curator-recipes</artifactId>
-            <version>4.1.0</version>
+            <version>5.1.0</version>
         </dependency>
-
+      <!-- 创建 Zookeeper 客户端依赖，一定要和 Zookeeper Server 版本保持一致 -->
+      <dependency>
+        <groupId>org.apache.zookeeper</groupId>
+        <artifactId>zookeeper</artifactId>
+        <version>3.5.8</version>
+        <exclusions>
+          <!--因为 zk 包使用的是 log4j 日志，和 springboot 的logback 日志冲突 -->
+          <exclusion>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-log4j12</artifactId>
+          </exclusion>
+        </exclusions>
+      </dependency>
         <dependency>
             <groupId>cn.hutool</groupId>
             <artifactId>hutool-all</artifactId>
