--- a/demo-mq-kafka/pom.xml
+++ b/demo-mq-kafka/pom.xml
@@ -54,6 +54,12 @@
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
         </dependency>
+      <dependency>
+        <groupId>org.springframework</groupId>
+        <artifactId>spring-context</artifactId>
+        <version>5.1.3.RELEASE</version>
+      </dependency>
+
     </dependencies>
 
     <build>
