--- a/demo-mq-kafka/pom.xml
+++ b/demo-mq-kafka/pom.xml
@@ -27,7 +27,10 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter</artifactId>
         </dependency>
-
+      <dependency>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-web</artifactId>
+      </dependency>
         <dependency>
             <groupId>org.springframework.kafka</groupId>
             <artifactId>spring-kafka</artifactId>
@@ -55,11 +58,9 @@
             <artifactId>guava</artifactId>
         </dependency>
       <dependency>
-        <groupId>org.springframework</groupId>
-        <artifactId>spring-context</artifactId>
-        <version>5.1.3.RELEASE</version>
+        <groupId>com.google.code.gson</groupId>
+        <artifactId>gson</artifactId>
       </dependency>
-
     </dependencies>
 
     <build>
