--- a/demo-mq-kafka/src/main/resources/application.yml
+++ b/demo-mq-kafka/src/main/resources/application.yml
@@ -1,11 +1,11 @@
 server:
   port: 8080
   servlet:
-    context-path: /demo
+    context-path: /
 spring:
   kafka:
     # 指定kafka server的地址，集群配多个，中间，逗号隔开
-    bootstrap-servers: localhost:9092
+    bootstrap-servers: 47.104.216.40:9092
     producer:
       # 当retris为0时，produce不会重复。retirs重发，此时repli节点完全成为leader节点，不会产生消息丢失。
       retries: 0
@@ -23,9 +23,10 @@ spring:
       value-serializer: org.apache.kafka.common.serialization.StringSerializer
     consumer:
       # 指定默认消费者group id --> 由于在kafka中，同一组中的consumer不会读取到同一个消息，依靠groud.id设置组名
-      group-id: spring-boot-demo
+      group-id: denley
       # 手动提交
       enable-auto-commit: false
+      # 配置消费者消息offset是否自动重置(消费者重连会能够接收最开始的消息)
       # smallest和largest才有效，如果smallest重新0开始读取，如果是largest从logfile的offset读取。一般情况下我们都是设置smallest
       auto-offset-reset: latest
       key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
@@ -39,12 +40,12 @@ spring:
       ack-mode: manual_immediate
 kafka:
   topics:
-    - name: topic1
+    - name: book
       num-partitions: 3
       replication-factor: 1
     - name: topic2
-      num-partitions: 1
+      num-partitions: 3
       replication-factor: 1
     - name: topic3
-      num-partitions: 2
+      num-partitions: 3
       replication-factor: 1
