--- a/demo-mq-kafka/pom.xml
+++ b/demo-mq-kafka/pom.xml
@@ -61,6 +61,11 @@
         <groupId>com.google.code.gson</groupId>
         <artifactId>gson</artifactId>
       </dependency>
+
+      <dependency>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-configuration-processor</artifactId>
+      </dependency>
     </dependencies>
 
     <build>
