--- a/demo-mq-kafka/src/main/resources/application.yml
+++ b/demo-mq-kafka/src/main/resources/application.yml
@@ -33,6 +33,8 @@ spring:
       value-deserializer: org.apache.kafka.common.serialization.StringDeserializer
       properties:
         session.timeout.ms: 60000
+      # 事务隔离级别
+      isolation-level: read_committed #仅读取已提交的消息
     listener:
       log-container-config: false
       concurrency: 5
