--- a/demo-log-aop/src/main/resources/application.yml
+++ b/demo-log-aop/src/main/resources/application.yml
@@ -2,3 +2,32 @@ server:
   port: 8080
   servlet:
     context-path: /demo
+spring:
+  redis:
+    host: 47.104.216.40
+    port: 9736
+    # 连接超时时间（记得添加单位，Duration）
+    timeout: 10000ms
+    # Redis默认情况下有16个分片，这里配置具体使用的分片
+    database: 0
+    # 密码 没有则可以不填
+    password: denley
+    # 集群配置（根据实际情况配置多节点）
+    #    cluster:
+    #      nodes:
+    #        - 192.168.200.161:6379
+    #      max-redirects: 2
+    # lettuce连接池
+    lettuce:
+      pool:
+        # 连接池最大连接数（使用负值表示没有限制） 默认 8
+        max-active: 8
+        # 连接池最大阻塞等待时间（使用负值表示没有限制） 默认 -1
+        max-wait: -1ms
+        # 连接池中的最大空闲连接 默认 8
+        max-idle: 8
+        # 连接池中的最小空闲连接 默认 0
+        min-idle: 0
+logging:
+  level:
+    com.xkcoding: info
